--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+#local.run.db=H2
+local.run.db=POSTGRESQL
+#
+#
 # Configurations useful for working with H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -17,8 +21,8 @@ spring.jpa.open-in-view=true
 #
 # What do with the schema
 # drop n create table again, good for testing
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=never
 #
 # Good for production!
 # spring.jpa.hibernate.ddl-auto=update
